Modified the scripts to be consistently styled, made button styles show more unicode characters

--- a/style.css
+++ b/style.css
@@ -1,20 +1,30 @@
-/* ::-webkit-resizer {
-  display: none;
-} */
 :root {
-    --changeWidth: 160px;
-  }
-  body {
-    background: linear-gradient(pink, orange);
-  }
-  textarea {
-    font-size: 30px;
-    resize: none;
-    /*   display:inline-block; */
-    width: var(--changeWidth);
-  }
-  textarea:hover {
-    color: blue;
-    background-color: orange;
-  }
-  
+  --changeWidth: 160px;
+}
+body {
+  background: linear-gradient(pink, orange);
+  font-family: Arial, Helvetica, sans-serif;
+}
+textarea {
+  font-size: 30px;
+  resize: none;
+  width: var(--changeWidth);
+}
+textarea:hover {
+  color: blue;
+  background-color: orange;
+}
+.lenny_face_button {
+  padding: 10px;
+  background-color: #fff;
+  border: none;
+  border-radius: 6px;
+  margin: 4px;
+  white-space: nowrap;
+  font-family: arial;
+}
+#mainDiv {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
